Add SEO meta tags for better search visibility

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>RUDRA — Portfolio // Vice City Edition</title>
-  <meta name="description" content="Rudra's creative portfolio — a GTA VI Vice City inspired developer showcase." />
+  <title>Rudra Pratap — Portfolio | Web Developer & Designer</title>
+  <meta name="description" content="Rudra Pratap's professional portfolio — a GTA VI Vice City inspired web developer and designer showcase." />
+  <meta name="keywords" content="Rudra Pratap, Rudra, developer, web developer, portfolio, designer" />
+  <meta name="author" content="Rudra Pratap" />
+  <meta property="og:title" content="Rudra Pratap — Portfolio" />
+  <meta property="og:description" content="Rudra Pratap's creative portfolio featuring web development projects." />
+  <meta property="og:type" content="website" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
