Fix asset paths for GitHub Pages subdirectory

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@300;400;500;600;700&family=Orbitron:wght@400;500;700;900&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
@@ -93,7 +93,7 @@
       <div class="wanted-top">
         <div class="mugshot">
           <div class="mugshot-placeholder">
-            <img src="/rudra.png" alt="Rudra Pratap Singh" class="mugshot-img" />
+            <img src="./public/rudra.png" alt="Rudra Pratap Singh" class="mugshot-img" />
           </div>
           <div class="mugshot-glow"></div>
         </div>
@@ -384,7 +384,7 @@
     </div>
   </footer>
 
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="./main.js"></script>
 </body>
 
 </html>
